<resources>
    <string name="app_name">Covid Guard</string>
    <string name="welcome_to_covid_guard">Welcome to Covid Guard!</string>
    <string name="register">REGISTER</string>
    <string name="covid_guard">Covid Guard</string>
    <string name="register_for_contact_tracing">Let\'s Get Started</string>
    <string name="logo">LOGO</string>
    <string name="info">With COVID Guard you can help keep the community safe from the spread of coronavirus</string>
    <string name="contact_tracing">Contact Tracing</string>
    <string name="terms_conditions"><![CDATA[By clicking the below button, you are accepting the ]]><a href="https://google.com">Terms and Conditions</a></string>
    <string name="health_status_healthy">I am healthy and uninfected</string>
    <string name="health_status_infected">I am infected with COVID-19</string>
    <string name="health_status_disclaimer">Here you can anonymously update your health status. You will be notified if another user who has been near you has contracted COVID-19</string>
    <string name="submit_keys">Submit Diagnosis Keys</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="preference_file_key">com.project.covidguard.TOKEN_FILE</string>
    <string name="encryption_master_key_alias"> com.project.covidguard.MASTER_AES_SHARED_PREF</string>
    <string name="splash_text">Checking for permissions and registration</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="check">Check for postive contact</string>
    <string name="devmetricscreen">Launch Developer Metrics</string>
    <string name="client_metrics">Button</string>
    <string name="tek_metric">Current Temporary Exposure Key</string>
    <string name="rpi_metric">Current Rolling Proximity Identifier</string>
    <string name="enin_metric">Current ENIntervalNumber</string>
    <string name="server_metric">Server Metrics</string>
    <string name="dev_screen_disclaimer">Here you can see the Temporary Exposure Key, Rolling Proximity Identifier and ENIntervalNumber</string>
    <string name="diagnose">Diagnose</string>
    <string name="metrics">Metrics</string>
    <string name="title_activity_terms">Terms</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_barcode">Barcode</string>
</resources>
