<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp">


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_above="@+id/button"
            android:onClick="termsConditionsLink"
            android:padding="10dp"
            android:text="@string/terms_conditions"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#F44336"
            android:onClick="clickRegistrationHandler"
            android:padding="10dp"
            android:text="@string/register_for_contact_tracing"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>